--- a/vmanage_login1.yaml
+++ b/vmanage_login1.yaml
@@ -1,4 +1,4 @@
-vmanage_host: 152.22.242.15
-vmanage_password: '@1Admin'
-vmanage_port: '10101'
-vmanage_username: admin
+vmanage_host: <vmanageIP>
+vmanage_password: '<vmanagePassword>'
+vmanage_port: '<port>'
+vmanage_username: <username>
